<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/safe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/cheap"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cheap"
        app:layout_constraintBottom_toTopOf="@+id/safe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="150sp"
    android:layout_marginTop="45sp"
    android:contentDescription="@string/todo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/guliver_go_logo"
    tools:srcCompat="@drawable/guliver_go_logo" />

    <ImageView
        android:id="@+id/powered_by_image"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safe"
        app:srcCompat="@drawable/ic_powerd_by_premier"
        tools:srcCompat="@drawable/ic_powerd_by_premier" />

    <TextView
        android:id="@+id/convinient"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/convinient"
        app:layout_constraintBottom_toTopOf="@+id/cheap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:text="Login"
        app:background="@drawable/button_login_rounded"
        app:backgroundTint="@color/login_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powered_by_image"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/welcome_call_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_call_rounded"
        android:text="Call"
        app:backgroundTint="@color/call_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/welcome_login_button"
        app:layout_constraintTop_toBottomOf="@+id/powered_by_image"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>