<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.port.android.ui.ActivityMain">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/driver_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/customerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_margin="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/customerProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_default_user"
                    tools:srcCompat="@mipmap/ic_default_user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/customerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Customer Name" />

                    <TextView
                        android:id="@+id/customerDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/customer_destination" />


                    <!--<RatingBar-->
                        <!--android:id="@+id/ratingBar"-->
                        <!--style="?android:attr/ratingBarStyleSmall"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:numStars="5"-->
                        <!--android:stepSize="0.1" -->



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/driver_action_accept_reject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/driver_accept_ride"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_driver_accept_ride_rounded"
                        android:padding="0dp"
                        android:text="@string/driver_accept_ride"
                        app:backgroundTint="@color/call_button_color" />

                    <Button
                        android:id="@+id/driver_decline_ride"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_driver_decline_ride_rounded"
                        android:padding="0dp"
                        android:text="@string/driver_decline_ride"
                        app:backgroundTint="@android:color/holo_red_dark" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/driver_action_call_start_ride"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/driver_call_customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_login_rounded"
                        android:padding="0dp"
                        android:text="@string/driver_call_customer"
                        app:backgroundTint="@color/call_button_color" />

                    <Button
                        android:id="@+id/driver_start_ride"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_call_rounded"
                        android:padding="0dp"
                        android:text="@string/driver_start_ride"
                        app:backgroundTint="@android:color/holo_red_dark" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/driver_action_end_ride"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/driver_end_ride"
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_call_driver_rounded"
                        android:padding="0dp"
                        android:text="@string/driver_end_ride"
                        app:backgroundTint="@android:color/holo_red_dark" />


                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/driver_drawer_profile_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098">

                <fragment
                    android:id="@+id/driver_place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/driver_drawer_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttons"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                android:src="@mipmap/ic_default_user"
                tools:srcCompat="@mipmap/ic_default_user" />



        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/driver_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        app:headerLayout="@layout/customer_nav_header_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/driver_activity_main_drawer" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_margin="20sp"
                android:src="@drawable/ic_powerd_by_premier"
                android:layout_height="100sp" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SCBSwitch"
                android:text="@string/driver_working"
                android:layout_margin="10sp"
                android:id="@+id/workingSwitch"/>
        </LinearLayout>

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
